--- a/home.html
+++ b/home.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>ClF3 Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="toolBar">
-  	  <button class="toolBar" onclick="page('Home')">Home</button>
+			<button class="toolBar" onclick="page('Home')">Home</button>
       <button class="toolBar" onclick="page('Pages')">Pages</button>
       <button class="toolBar" onclick="page('Support')">Support</button>
       <button class="toolBar" onclick="pop('SignIn')">Sign In</button>
@@ -26,6 +26,6 @@
 		</div>
 		<div id="SignIn"></div>
 		<div id="Register"></div>
-    <script src="script.js"></script>
+    <script src="home.js"></script>
   </body>
 </html>
