--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
 		</div>
 		<div id="SignIn"></div>
 		<div id="Register"></div>
+		<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="home.js"></script>
   </body>
 </html>
